Merge: Merge logic from two developer
